Shopnow_k8s/k8s-manifests/09-config-server.yaml
---
# =============================================================================
# Spring Cloud Config Server Deployment + Service
# =============================================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: shopnow
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: harbor-server/techcareer/config-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5859
              protocol: TCP
          volumeMounts:
            - name: config-files
              mountPath: /app/src/main/resources/config
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: config-files
          configMap:
            name: spring-cloud-config
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: shopnow
  labels:
    app: config-server
spec:
  type: ClusterIP
  ports:
    - port: 5859
      targetPort: 5859
      protocol: TCP
      name: http
  selector:
    app: config-server
